--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "short-lnk",
+  "name": "intergestalt-meteor-react-boilerplate",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "babel-runtime": "6.18.0",
-    "meteor-node-stubs": "~0.2.0",
-    "moment": "^2.17.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-router": "^3.0.0",
-    "simpl-schema": "0.0.3"
+    "@babel/runtime": "^7.0.0-beta.44",
+    "bcrypt": "^2.0.1",
+    "meteor-node-stubs": "0",
+    "moment": "2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-router": "3",
+    "simpl-schema": "1"
   },
   "engines": {
-    "node": "4.6.2"
+    "node": "8.8.1"
   }
 }
