initial commit based on boilerplate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intergestalt-meteor-react-boilerplate",
+  "name": "hugbie",
   "private": true,
   "scripts": {
     "start": "meteor run"
