--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "3",
-    "simpl-schema": "1"
+    "simpl-schema": "1",
+    "uniforms": "^1.24.1",
+    "uniforms-bootstrap3": "^1.24.1"
   },
   "engines": {
     "node": "8.8.1"
