--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "meteor-node-stubs": "0",
     "moment": "2",
     "react": "^16.3.2",
+    "react-data-grid": "^4.0.0",
     "react-dom": "^16.3.2",
     "react-router": "3",
-    "simpl-schema": "1",
     "styled-components": "^3.2.6",
     "uniforms": "^1.24.1",
     "uniforms-bootstrap3": "^1.24.1"
