--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-data-grid": "^4.0.0",
     "react-dom": "^16.3.2",
     "react-router": "3",
+    "simpl-schema": "^1.5.0",
     "styled-components": "^3.2.6",
     "uniforms": "^1.24.1",
     "uniforms-bootstrap3": "^1.24.1"
