--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.44",
+    "annyang": "^2.6.0",
     "bcrypt": "^2.0.1",
     "meteor-node-stubs": "0",
     "moment": "2",
     "react": "^16.3.2",
+    "react-beforeunload": "^1.0.4",
     "react-data-grid": "^4.0.0",
     "react-dom": "^16.3.2",
     "react-router": "3",
