--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.44",
-    "annyang": "^2.6.0",
+    "@babel/runtime": "^7.0.0-beta.46",
+    "annyang": "^2.6.1",
     "bcrypt": "^2.0.1",
-    "meteor-node-stubs": "0",
+    "meteor-node-stubs": "^0.4.1",
     "moment": "2",
     "react": "^16.3.2",
     "react-beforeunload": "^1.0.4",
-    "react-data-grid": "^4.0.0",
+    "react-data-grid": "^4.0.7",
     "react-dom": "^16.3.2",
     "react-router": "3",
     "simpl-schema": "^1.5.0",
-    "styled-components": "^3.2.6",
-    "uniforms": "^1.24.1",
-    "uniforms-unstyled": "^1.24.1"
+    "uniforms": "^1.24.3",
+    "uniforms-unstyled": "^1.24.3"
   },
   "engines": {
     "node": "8.8.1"
