--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "hugbie",
+  "name": "dialoguebot",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.46",
+    "@babel/runtime": "^7.2.0",
     "annyang": "^2.6.1",
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.3",
     "meteor-node-stubs": "^0.4.1",
     "moment": "2",
     "react": "^16.3.2",
